added lufs chart

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 color-eyre = "0.6.5"
 crossbeam = "0.8.4"
 crossterm = "0.29.0"
+ebur128 = "0.1.10"
 ratatui = "0.29.0"
 ratatui-explorer = "0.2.1"
 rodio = "0.21.1"
