--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ ratatui = "0.29.0"
 ratatui-explorer = "0.2.1"
 rodio = "0.21.1"
 spectrum-analyzer = "1.7.0"
-symphonia = { version = "0.5.4", features = ["mp3"] }
+symphonia = { version = "0.5.4" }
