--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - run: sudo apt-get install -yqq alsa
     - name: Build
       run: cargo build --verbose
     - name: Run tests
