--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: sudo apt-get install -yqq alsa-lib
+    - run: sudo apt-get install -yqq alsa-tools
     - name: Build
       run: cargo build --verbose
     - name: Run tests
