--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ strip = true
 lto = true
 codegen-units = 1
 panic = "abort"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
