--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        
+      - name: Install Alsa
+        run: sudo apt-get install -yqq libasound2-dev
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
