--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "v*.*.*"
 env:
   CARGO_TERM_COLOR: always
-  
+
 jobs:
   release:
     name: Release - ${{ matrix.platform.release_for }}
@@ -33,9 +33,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Alsa (Linux only)
-        if: matrix.platform.os == 'ubuntu-24.04'
-        run: sudo apt-get install -yqq libasound2-dev
+      # - name: Install Alsa (Linux only)
+      #   if: matrix.platform.os == 'ubuntu-24.04'
+      #   run: sudo apt-get install -yqq libasound2-dev
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
       - name: Build executable
