Update release.yml, add crates publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,3 +55,5 @@ jobs:
           executable-name: soundscope
           target: ${{ matrix.platform.target }}
         if: matrix.toolchain == 'stable'
+      - name: Publish crate to crates.io
+        uses: katyo/publish-crates@v2
