--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,3 +57,5 @@ jobs:
         if: matrix.toolchain == 'stable'
       - name: Publish crate to crates.io
         uses: katyo/publish-crates@v2
+        with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
