--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,22 @@ permissions:
   contents: write
 
 jobs:
+  publish-crate:
+    name: Publish to crates.io
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install Alsa (Linux only)
+        if: matrix.platform.os == 'ubuntu-24.04'
+        run: sudo apt-get install -yqq libasound2-dev
+      - name: Cache cargo
+        uses: Swatinem/rust-cache@v2
+      - name: Publish crate
+        uses: katyo/publish-crates@v2
+        with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
   release:
     name: Release - ${{ matrix.platform.release_for }}
     strategy:
@@ -55,7 +71,3 @@ jobs:
           executable-name: soundscope
           target: ${{ matrix.platform.target }}
         if: matrix.toolchain == 'stable'
-      - name: Publish crate to crates.io
-        uses: katyo/publish-crates@v2
-        with:
-          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
