--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "soundscope"
-version = "1.1.1"
+version = "1.2.0"
 edition = "2024"
 description = "A command-line tool for analyzing audio files and real-time input (FFT, LUFS)"
 repository = "https://github.com/bananaofhappiness/soundscope"
@@ -12,6 +12,7 @@ keywords = ["audio", "command-line", "cli"]
 cpal = "0.16.0"
 crossbeam = "0.8.4"
 crossterm = "0.29.0"
+dirs = "6.0.0"
 ebur128 = "0.1.10"
 eyre = "0.6.12"
 ratatui = {version = "0.29.0", features = ["serde"]}
