--- a/.github/workflows/release-dry.yml
+++ b/.github/workflows/release-dry.yml
@@ -37,6 +37,9 @@ jobs:
           - os_name: macOS-x86_64
             os: macOS-latest
             target: x86_64-apple-darwin
+          - os_name: macOS-aarch64
+            os: macOS-latest
+            target: aarch64-apple-darwin
           - os_name: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-gnu
