--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ dirs = "6.0.0"
 ebur128 = "0.1.10"
 eyre = "0.6.12"
 ratatui = {version = "0.29.0", features = ["serde"]}
-ratatui-explorer = "0.2.1"
+ratatui-explorer = {git = "https://github.com/bananaofhappiness/ratatui-explorer.git", branch="master"}
 ringbuffer = "0.16.0"
-rodio = "0.21.1"
+rodio = {version = "0.21.1", features = ["symphonia-all"]}
 serde = { version = "1.0.225", features = ["derive"] }
 spectrum-analyzer = "1.7.0"
 symphonia = { version = "0.5.4" }
