--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0.225", features = ["derive"] }
 spectrum-analyzer = "1.7.0"
 symphonia = { version = "0.5.4" }
 toml = "0.9.6"
+tui-big-text = "0.7.0"
 
 [profile.release]
 strip = true
