--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ dirs = "6.0.0"
 ebur128 = "0.1.10"
 eyre = "0.6.12"
 ratatui = {version = "0.29.0", features = ["serde"]}
-ratatui-explorer = {version = "0.2.1", git = "https://github.com/bananaofhappiness/ratatui-explorer.git", branch="master"}
+ratatui-explorer = {package = "ratatui-explorer-with-filtering", version = "0.2.1"}
 ringbuffer = "0.16.0"
 rodio = {version = "0.21.1", features = ["symphonia-all"]}
 serde = { version = "1.0.225", features = ["derive"] }
