--- a/.github/workflows/release-dry.yml
+++ b/.github/workflows/release-dry.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Install Alsa
         run: | 
           sudo apt-get update -yqq
-          sudo apt-get upgrade -yqq
           sudo apt-get install -yqq libasound2-dev
       - name: Lint
         run: |
@@ -54,7 +53,9 @@ jobs:
         uses: actions/checkout@v5
       - name: Install Alsa (Linux only)
         if: matrix.platform.os == 'ubuntu-latest'
-        run: sudo apt-get install -yqq libasound2-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -yqq libasound2-dev
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
       - name: Build executable
